# bookos-store

./: .gitignore  PKGBUILD
src/: i18n.js  index.html  locales.js  main.js  style.css
src-tauri/: Cargo.toml  tauri-bridge.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: commands.toml
src-tauri/src/: main.rs
