[package]
name = "bookos-store"
version = "0.1.0"
description = "BookOS Store — instala y gestiona las apps del ecosistema BookOS"
authors = ["BookOS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-localhost = "2"
portpicker = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
